# EggShell

./: .gitignore  builtins.c  builtins.h  command.c  command.h  definitions.h  egg_shell  execution.c  execution.h  foo  formatting.c  formatting.h  history.c  history.h  main.c  makefile  protocol.c  protocol.h  protocol.md  signals.h  simple_shell  simple_shell.c  simple_shell.h  terminal.c  test  token.c  token.h
.github/workflows/: main.yml
server/: CMakeLists.txt  builtins.c  history.c  history.h  louise.txt  mailman.c  mailman.h  main.c  makefile  protocol.h  server  server.c  server.h  signals.c  signals.h  terminal.h  testing.txt
shell/: CMakeLists.txt  builtins.c  builtins.h  command.c  command.h  definitions.h  egg_shell  execution.c  foo  formatting.c  formatting.h  history.c  history.h  main.c  makefile  protocol.c  signals.c  signals.h  terminal.c  terminal.h  token.c  token.h
shell/testing/: bar  error  error.txt  process
